# ng-i18n-utils

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
src/: main.rs
src/core/: mod.rs  utils.rs
src/core/merger/: merger.rs
src/core/updater/: mod.rs  updater.rs
src/types/: args.rs  mod.rs  translation_file.rs
