[package]
name = "ng-i18n-utils"
version = "0.1.0"
edition = "2021"
authors = ["local.interloper"]
repository = "https://github.com/local-interloper/ng-i18n-utils"
license = "GPL-3.0"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
